--- a/about/about.html
+++ b/about/about.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="CVF Solutions provides reliable IT support, computer setup, and business-ready technology for small businesses and beyond." />
   <link rel="icon" href="/images/logo.jpg" type="image/jpg">
-  <link rel="stylesheet" href="/css/global.css">
-  <link rel="stylesheet" href="/about/about.css">
+  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./about/about.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Google Fonts -->
