--- a/contact/contact.html
+++ b/contact/contact.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="CVF Solutions provides reliable IT support, computer setup, and business-ready technology for small businesses and beyond." />
-  <link rel="icon" href="/images/logo.jpg" type="image/jpg">
-  <link rel="stylesheet" href="/css/global.css">
-  <link rel="stylesheet" href="/contact/contact.css">
+  <link rel="icon" href="./images/logo.jpg" type="image/jpg">
+  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./contact/contact.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Google Fonts -->
@@ -18,17 +18,17 @@
   <header>
     <div class="container nav">
       <div class="brand">
-        <a href="/index.html"><img id="logo" src="/images/logo.jpg" class="nav-logo" /></a>
-        <a href="/index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
-        <a href="/index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
+        <a href="./index.html"><img id="logo" src="./images/logo.jpg" class="nav-logo" /></a>
+        <a href="./index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
+        <a href="./index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
       </div>
 
       <nav>
         <div class="navlinks">
-          <a href="/services/services.html">Services</a>
-          <a href="/about/about.html">About</a>
-          <a href="/clients/clients.html">Clients</a>
-          <a href="/contact/contact.html" class="cta">Contact Us</a>
+          <a href="./services/services.html">Services</a>
+          <a href="./about/about.html">About</a>
+          <a href="./clients/clients.html">Clients</a>
+          <a href="./contact/contact.html" class="cta">Contact Us</a>
         </div>
         <button class="mobile-toggle" aria-label="Open menu" id="mobileToggle">☰</button>
       </nav>
