--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="CVF Solutions provides reliable IT support, computer setup, and business-ready technology for small businesses and beyond." />
-  <link rel="icon" href="/images/logo.jpg" type="image/jpg">
+  <link rel="icon" href="./images/logo.jpg" type="image/jpg">
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <script src="/js/cvf-solutions.js" defer></script>
+  <script src="./js/cvf-solutions.js" defer></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
@@ -19,18 +19,18 @@
   <header>
     <div class="container nav">
       <div class="brand">
-        <a href="/index.html"><img id="logo" src="/images/logo.jpg" class="nav-logo" /></a>
-        <a href="/index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
-        <a href="/index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
+        <a href="./index.html"><img id="logo" src="./images/logo.jpg" class="nav-logo" /></a>
+        <a href="./index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
+        <a href="./index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
       </div>
 
       <nav>
         <div class="navlinks">
-          <a href="/services/services.html">Services</a>
-          <a href="/about/about.html">About</a>
-          <a href="/clients/clients.html">Clients</a>
-          <a href="/contact/contact.html" class="cta">Contact Us</a>
-          <!-- <a href="/test.html">Test Page</a> -->
+          <a href="./services/services.html">Services</a>
+          <a href="./about/about.html">About</a>
+          <a href="./clients/clients.html">Clients</a>
+          <a href="./contact/contact.html" class="cta">Contact Us</a>
+          <!-- <a href="./test.html">Test Page</a> -->
         </div>
         <button class="mobile-toggle" aria-label="Open menu" id="mobileToggle">☰</button>
       </nav>
@@ -39,10 +39,10 @@
     <!-- Mobile slide-in menu -->
     <div id="mobileMenu" style="display:none;padding:0.75rem;background:white;border-top:1px solid #e8f0f5">
       <div class="container" style="display:flex;flex-direction:column;gap:.5rem">
-        <a href="/services/services.html">Services</a>
-        <a href="/about/about.html">About</a>
-        <a href="/clients/clients.html">Clients</a>
-        <a href="/contact/contact.html" class="cta">Contact Us</a>
+        <a href="./services/services.html">Services</a>
+        <a href="./about/about.html">About</a>
+        <a href="./clients/clients.html">Clients</a>
+        <a href="./contact/contact.html" class="cta">Contact Us</a>
       </div>
     </div>
   </header>
@@ -54,15 +54,15 @@
           <h1>Your IT Partner for Seamless Business Operations</h1>
           <p>Reliable IT support, setup, and maintenance so your team can focus on what matters. Fast deployments, secure networks, and friendly support for small businesses and organizations.</p>
           <div class="buttons">
-            <a href="/contact/contact.html" class="btn-primary" style="color: white;">Request a Consultation</a>
+            <a href="./contact/contact.html" class="btn-primary" style="color: white;">Request a Consultation</a>
             <!-- <a class="btn-outline" href="#services">See Services</a> -->
           </div>
         </div>
         <div class="slideshow-container">
-            <img src="/images/iStock_1.jpg" alt="Slide 1" class="active">
-            <img src="/images/iStock_2.jpg" alt="Slide 2">
-            <img src="/images/iStock_3.jpg" alt="Slide 3">
-            <img src="/images/iStock_4.jpg" alt="Slide 4">
+            <img src="./images/iStock_1.jpg" alt="Slide 1" class="active">
+            <img src="./images/iStock_2.jpg" alt="Slide 2">
+            <img src="./images/iStock_3.jpg" alt="Slide 3">
+            <img src="./images/iStock_4.jpg" alt="Slide 4">
         </div>
     </section>
   </main>
