almost all links fixed

--- a/clients/clients.html
+++ b/clients/clients.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="CVF Solutions provides reliable IT support, computer setup, and business-ready technology for small businesses and beyond." />
   <link rel="icon" href="./images/logo.jpg" type="image/jpg">
-  <link rel="stylesheet" href="./css/global.css">
-  <link rel="stylesheet" href="./clients/clients.css">
+  <link rel="stylesheet" href="../css/global.css">
+  <link rel="stylesheet" href="./clients.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Google Fonts -->
@@ -18,17 +18,17 @@
   <header>
     <div class="container nav">
       <div class="brand">
-        <a href="./index.html"><img id="logo" src="./images/logo.jpg" class="nav-logo" /></a>
-        <a href="./index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
-        <a href="./index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
+        <a href="../index.html"><img id="logo" src="../images/logo.jpg" class="nav-logo" /></a>
+        <a href="../index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
+        <a href="../index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
       </div>
 
       <nav>
         <div class="navlinks">
-          <a href="./services/services.html">Services</a>
-          <a href="./about/about.html">About</a>
-          <a href="./clients/clients.html">Clients</a>
-          <a href="./contact/contact.html" class="cta">Contact Us</a>
+          <a href="../services/services.html">Services</a>
+          <a href="../about/about.html">About</a>
+          <a href="./clients.html">Clients</a>
+          <a href="../contact/contact.html" class="cta">Contact Us</a>
         </div>
         <button class="mobile-toggle" aria-label="Open menu" id="mobileToggle">☰</button>
       </nav>
@@ -37,10 +37,10 @@
     <!-- Mobile slide-in menu -->
     <div id="mobileMenu" style="display:none;padding:0.75rem;background:white;border-top:1px solid #e8f0f5">
       <div class="container" style="display:flex;flex-direction:column;gap:.5rem">
-        <a href="./services/services.html">Services</a>
-        <a href="./about/about.html">About</a>
-        <a href="./clients/clients.html">Clients</a>
-        <a href="./contact/contact.html" class="cta">Contact Us</a>
+        <a href="../services/services.html">Services</a>
+        <a href="../about/about.html">About</a>
+        <a href="./clients.html">Clients</a>
+        <a href="../contact/contact.html" class="cta">Contact Us</a>
       </div>
     </div>
   </header>
@@ -52,7 +52,7 @@
           <h1>Your IT Partner for Seamless Business Operations</h1>
           <p>Reliable IT support, setup, and maintenance so your team can focus on what matters. Fast deployments, secure networks, and friendly support for small businesses and organizations.</p>
           <div class="buttons">
-            <a class="btn-primary" href="./contact/contact.html">Request a Consultation</a>
+            <a class="btn-primary" href="../contact/contact.html">Request a Consultation</a>
           </div>
         </div>
 
@@ -60,7 +60,7 @@
           <h4 style="margin:0 0 0.5rem">Need immediate help?</h4>
           <p style="margin:0 0 1rem">Call us: <a href="tel:+12023616823" class="phone-link" style="color:var(--accent);font-weight:700">(202) 361-6823</a></p>
           <p style="margin:0 0 1rem;font-size:0.95rem;opacity:0.95">Emergency setup, onsite visits, and remote troubleshooting available.</p>
-          <a href="./contact/contact.html" class="btn-primary">Contact Us</a>
+          <a href="../contact/contact.html" class="btn-primary">Contact Us</a>
         </div>
       </div>
     </section>
