--- a/services/services.html
+++ b/services/services.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="CVF Solutions provides reliable IT support, computer setup, and business-ready technology for small businesses and beyond." />
-  <link rel="icon" href="/images/logo.jpg" type="image/jpg">
-  <link rel="stylesheet" href="/css/global.css">
-  <link rel="stylesheet" href="/services/services.css">
+  <link rel="icon" href="../images/logo.jpg" type="image/jpg">
+  <link rel="stylesheet" href="../css/global.css">
+  <link rel="stylesheet" href="./services.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Google Fonts -->
@@ -18,17 +18,17 @@
   <header>
     <div class="container nav">
       <div class="brand">
-        <a href="/index.html"><img id="logo" src="/images/logo.jpg" class="nav-logo" /></a>
-        <a href="/index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
-        <a href="/index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
+        <a href="../index.html"><img id="logo" src="../images/logo.jpg" class="nav-logo" /></a>
+        <a href="../index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
+        <a href="../index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
       </div>
 
       <nav>
         <div class="navlinks">
-          <a href="/services/services.html">Services</a>
-          <a href="/about/about.html">About</a>
-          <a href="/clients/clients.html">Clients</a>
-          <a href="/contact/contact.html" class="cta">Contact Us</a>
+          <a href="./services.html">Services</a>
+          <a href="../about/about.html">About</a>
+          <a href="../clients/clients.html">Clients</a>
+          <a href="../contact/contact.html" class="cta">Contact Us</a>
         </div>
         <button class="mobile-toggle" aria-label="Open menu" id="mobileToggle">☰</button>
       </nav>
@@ -37,10 +37,10 @@
     <!-- Mobile slide-in menu -->
     <div id="mobileMenu" style="display:none;padding:0.75rem;background:white;border-top:1px solid #e8f0f5">
       <div class="container" style="display:flex;flex-direction:column;gap:.5rem">
-        <a href="#services">Services</a>
-        <a href="#about">About</a>
-        <a href="#clients">Clients</a>
-        <a href="/contact/contact.html" class="cta">Contact Us</a>
+        <a href="./services.html">Services</a>
+        <a href="../about/about.html">About</a>
+        <a href="../clients/clients.html">Clients</a>
+        <a href="../contact/contact.html" class="cta">Contact Us</a>
       </div>
     </div>
   </header>
@@ -52,7 +52,7 @@
           <h1>Your IT Partner for Seamless Business Operations</h1>
           <p>Reliable IT support, setup, and maintenance so your team can focus on what matters. Fast deployments, secure networks, and friendly support for small businesses and organizations.</p>
           <div class="buttons">
-            <a class="btn-primary" href="/contact/contact.html">Request a Consultation</a>
+            <a class="btn-primary" href="../contact/contact.html">Request a Consultation</a>
           </div>
         </div>
 
@@ -60,7 +60,7 @@
           <h4 style="margin:0 0 0.5rem">Need immediate help?</h4>
           <p style="margin:0 0 1rem">Call us: <a href="tel:+12023616823" class="phone-link" style="color:var(--accent);font-weight:700">(202) 361-6823</a></p>
           <p style="margin:0 0 1rem;font-size:0.95rem;opacity:0.95">Emergency setup, onsite visits, and remote troubleshooting available.</p>
-          <a href="/contact/contact.html" class="btn-primary">Contact Us</a>
+          <a href="../contact/contact.html" class="btn-primary">Contact Us</a>
         </div>
       </div>
     </section>
@@ -85,27 +85,27 @@
                 <p>Firewall setup, Wi‑Fi deployment, secure remote access, and best-practice configuration to protect your data.</p>
             </div>
 
-            <a href="/services/hardware_and_network/hardware_and_network.html" class="card">
+            <a href="./hardware_and_network/hardware_and_network.html" class="card">
                 <h3>Hardware And Networking</h3>
                 <p>Comprehensive OS and network support, ensuring compatibility, security, and reliable IT infrastructure from desktops to WANs and VPNs.</p>
             </a>
 
-            <a href="/services/application_support/application_support.html" class="card">
+            <a href="./application_support/application_support.html" class="card">
                 <h3>Application Support</h3>
                 <p>Tier 1 software support to troubleshoot applications, ensure security, and optimize IT performance.</p>
             </a>
 
-            <a href="/services/voip/voip.html" class="card">
+            <a href="./voip/voip.html" class="card">
                 <h3>VoIP</h3>
                 <p>Reliable VoIP design and implementation, ensuring smooth calls through optimal hardware, QoS, and stable internet connections.</p>
             </a>
 
-            <a href="/services/development_integration/development_integration.html" class="card">
+            <a href="./development_integration/development_integration.html" class="card">
                 <h3>Development & Integration</h3>
                 <p>Custom software and database solutions, including integrations, reporting, and tailored application enhancements for your business needs.</p>
             </a>
 
-            <a href="/services/it_design/it_design.html" class="card">
+            <a href="./it_design/it_design.html" class="card">
                 <h3>IT Design</h3>
                 <p>Turnkey IT solutions for office builds and renovations, from network design to hardware installation and system implementation.</p>
             </a>
