certifications added and colors changed

--- a/clients/clients.html
+++ b/clients/clients.html
@@ -19,8 +19,8 @@
     <div class="container nav">
       <div class="brand">
         <a href="../index.html"><img id="logo" src="../images/logo.jpg" class="nav-logo" /></a>
-        <a href="../index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
-        <a href="../index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
+        <a href="../index.html" class="logo">CVF-Solutions</a>
+        <a href="../index.html" class="logo" style="font-size:0.85rem">IT Support & Management</a>
       </div>
 
       <nav>
@@ -69,18 +69,18 @@
       <div class="container">
         <h2 style="margin:0 0 1rem;color:white">What clients say</h2>
         <div class="client-grid">
-          <a href="https://eyerx.com" class="client">
-            <h3>EyeRx</h3>
+          <a href="https://novaeyedocs.com" class="client">
+            <h3>Northern Virginia Doctors of Optometry</h3>
             <p style="margin:0.5rem 0 0">"CVF Solutions migrated our POS and set up new laptops for our staff — it was seamless and fast. Highly recommend."</p>
           </a>
 
-          <a href="https://www.drsusanhurson.com" class="client">
-            <h3>Susan Butler Hurson, M.D. Gynecology and Women's Health</h3>
+          <a href="https://virginia-lasik.com" class="client">
+            <h3>Virginia Lasik | Anh Nguyen Opthalmology</h3>
             <p style="margin:0.5rem 0 0">"Prompt, professional, and thorough. They fixed longstanding network issues that other vendors couldn't."</p>
           </a>
 
-          <a href="https://www.symmetrysalonstudios.com" class="client">
-            <h3>Symmetry Salon Studios</h3>
+          <a href="https://wonderyearspediatrics.com" class="client">
+            <h3>Wonder Years Pediatrics</h3>
             <p style="margin:0.5rem 0 0">"Excellent onsite support and great at explaining things in plain English."</p>
           </a>
 
