--- a/services/services.html
+++ b/services/services.html
@@ -19,8 +19,8 @@
     <div class="container nav">
       <div class="brand">
         <a href="../index.html"><img id="logo" src="../images/logo.jpg" class="nav-logo" /></a>
-        <a href="../index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
-        <a href="../index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
+        <a href="../index.html" class="logo">CVF-Solutions</a>
+        <a href="../index.html" class="logo" style="font-size:0.85rem">IT Support & Management</a>
       </div>
 
       <nav>
