--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>CVF Solutions — IT Support & Management</title>
+  <title>CVF-Solutions — IT Support & Management</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="CVF Solutions provides reliable IT support, computer setup, and business-ready technology for small businesses and beyond." />
@@ -20,8 +20,8 @@
     <div class="container nav">
       <div class="brand">
         <a href="./index.html"><img id="logo" src="./images/logo.jpg" class="nav-logo" /></a>
-        <a href="./index.html" class="logo">CVF<span style="color:var(--accent)"> Solutions</span></a>
-        <a href="./index.html" class="logo" style="font-size:0.85rem;color:rgba(10,20,40,0.6)">IT Support & Management</a>
+        <a href="./index.html" class="logo">CVF-Solutions</span></a>
+        <a href="./index.html" class="logo" style="font-size:0.85rem">IT Support & Management</a>
       </div>
 
       <nav>
