--- a/clients/clients.html
+++ b/clients/clients.html
@@ -25,10 +25,10 @@
 
       <nav>
         <div class="navlinks">
-          <a href="../services/services.html">Services</a>
-          <a href="../about/about.html">About</a>
-          <a href="./clients.html">Clients</a>
-          <a href="../contact/contact.html" class="cta">Contact Us</a>
+          <a class="navlink" href="../services/services.html">Services</a>
+          <a class="navlink" href="../about/about.html">About</a>
+          <a class="navlink" href="./clients.html">Clients</a>
+          <a class="navlink cta" href="../contact/contact.html">Contact Us</a>
         </div>
         <button class="mobile-toggle" aria-label="Open menu" id="mobileToggle">☰</button>
       </nav>
@@ -51,16 +51,16 @@
         <div>
           <h1>Your IT Partner for Seamless Business Operations</h1>
           <p>Reliable IT support, setup, and maintenance so your team can focus on what matters. Fast deployments, secure networks, and friendly support for small businesses and organizations.</p>
-          <div class="buttons">
+          <!-- <div class="buttons">
             <a class="btn-primary" href="../contact/contact.html">Request a Consultation</a>
-          </div>
+          </div> -->
         </div>
 
         <div class="hero-card">
           <h4 style="margin:0 0 0.5rem">Need immediate help?</h4>
           <p style="margin:0 0 1rem">Call us: <a href="tel:+12023616823" class="phone-link" style="color:var(--accent);font-weight:700">(202) 361-6823</a></p>
           <p style="margin:0 0 1rem;font-size:0.95rem;opacity:0.95">Emergency setup, onsite visits, and remote troubleshooting available.</p>
-          <a href="../contact/contact.html" class="btn-primary">Contact Us</a>
+          <!-- <a href="../contact/contact.html" class="btn-primary">Contact Us</a> -->
         </div>
       </div>
     </section>
