--- a/contact/contact.html
+++ b/contact/contact.html
@@ -25,10 +25,10 @@
 
       <nav>
         <div class="navlinks">
-          <a href="../services/services.html">Services</a>
-          <a href="../about/about.html">About</a>
-          <a href="../clients/clients.html">Clients</a>
-          <a href="./contact.html" class="cta">Contact Us</a>
+          <a class="navlink" href="../services/services.html">Services</a>
+          <a class="navlink" href="../about/about.html">About</a>
+          <a class="navlink" href="../clients/clients.html">Clients</a>
+          <a class="navlink cta" href="./contact.html">Contact Us</a>
         </div>
         <button class="mobile-toggle" aria-label="Open menu" id="mobileToggle">☰</button>
       </nav>
