--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
       <nav>
         <div class="navlinks">
-          <a href="./services/services.html">Services</a>
-          <a href="./about/about.html">About</a>
-          <a href="./clients/clients.html">Clients</a>
-          <a href="./contact/contact.html" class="cta">Contact Us</a>
+          <a class="navlink" href="./services/services.html"><span>Services</span></a>
+          <a class="navlink" href="./about/about.html"><span>About</span></a>
+          <a class="navlink" href="./clients/clients.html"><span>Clients</span></a>
+          <!-- <a href="./contact/contact.html" class="cta">Contact Us</a> -->
           <!-- <a href="./test.html">Test Page</a> -->
         </div>
         <button class="mobile-toggle" aria-label="Open menu" id="mobileToggle">☰</button>
@@ -42,7 +42,7 @@
         <a href="./services/services.html">Services</a>
         <a href="./about/about.html">About</a>
         <a href="./clients/clients.html">Clients</a>
-        <a href="./contact/contact.html" class="cta">Contact Us</a>
+        <!-- <a href="./contact/contact.html" class="cta">Contact Us</a> -->
       </div>
     </div>
   </header>
@@ -54,7 +54,7 @@
           <h1>Your IT Partner for Seamless Business Operations</h1>
           <p>Reliable IT support, setup, and maintenance so your team can focus on what matters. Fast deployments, secure networks, and friendly support for small businesses and organizations.</p>
           <div class="buttons">
-            <a href="./contact/contact.html" class="btn-primary" style="color: white;">Request a Consultation</a>
+            <a href="./contact/contact.html" class="btn-primary">Request a Consultation</a>
             <!-- <a class="btn-outline" href="#services">See Services</a> -->
           </div>
         </div>
