network background added to all pages

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>  
 
 <body>
+  <canvas id="particles-bg"></canvas>
   <header>
     <div class="container nav">
       <div class="brand">
