--- a/clients/clients.html
+++ b/clients/clients.html
@@ -9,12 +9,14 @@
   <link rel="stylesheet" href="../css/global.css">
   <link rel="stylesheet" href="./clients.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script src="../js/cvf-solutions.js" defer></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 </head>  
 
 <body>
+  <canvas id="particles-bg"></canvas>
   <header>
     <div class="container nav">
       <div class="brand">
