all attempted versions of transition code added

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -47,7 +47,7 @@
     </div>
   </header>
 
-  <main>
+  <main id="page-content" class="fade-in">
     <section class="map-box">
         <iframe width="500" height="350" frameborder="0" style="border:0" 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10275.005613455798!2d-77.01532402282106!3d38.91645714557732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b7f85631eef5%3A0xd45f22ac8dab981!2s111%20Thomas%20St%20NW%2C%20Washington%2C%20DC%2020001!5e1!3m2!1sen!2sus!4v1760175281619!5m2!1sen!2sus" 
@@ -78,7 +78,7 @@
 
       </div>
     </section>
-
+    <div id="transition-overlay"></div>
   </main>
 
   <footer>
