--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a class="navlink" href="./about/about.html"><span>About</span></a>
           <a class="navlink" href="./clients/clients.html"><span>Clients</span></a>
           <!-- <a href="./contact/contact.html" class="cta">Contact Us</a> -->
-          <!-- <a href="./test.html">Test Page</a> -->
+          <a href="./test.html">Test Page</a>
         </div>
         <button class="mobile-toggle" aria-label="Open menu" id="mobileToggle">☰</button>
       </nav>
@@ -48,11 +48,11 @@
     </div>
   </header>
 
-  <main>
+  <main id="page-content" class="fade-in">
     <section class="hero">
       <div class="container-hero-inner">
         <div>
-          <h1>Your IT Partner for Seamless Business Operations</h1>
+          <h1>Your IT Partner for Specialized Medical IT Solutions</h1>
           <p>Reliable IT support, setup, and maintenance so your team can focus on what matters. Fast deployments, secure networks, and friendly support for small businesses and organizations.</p>
           <div class="buttons">
             <a href="./contact/contact.html" class="btn-primary">Request a Consultation</a>
@@ -95,7 +95,6 @@
         </div>
       </div>
     </div>
-
     <div class="container center" style="margin-top:1rem">© CVF Solutions — All rights reserved</div>
   </footer>
 </body>
