--- a/services/services.html
+++ b/services/services.html
@@ -47,7 +47,7 @@
     </div>
   </header>
 
-  <main>
+  <main id="page-content" class="fade-in">
     <section class="hero">
       <div class="container hero-inner">
         <div>
@@ -114,6 +114,7 @@
         </div>
       </div>
     </section>
+    <div id="transition-overlay"></div>
   </main>
 
   <footer>
