--- a/test.html
+++ b/test.html
@@ -44,6 +44,9 @@
          style="width:300px; height:auto; display:block; border:2px solid blue;">
     <p style="color:black;">If you see this text, the image failed to load.</p>
   </a>
+
+  <a href="./transition-test.html">Home</a>
+  <a href="./transition-test2.html">Go to Page 2</a>
 </body>
 </html>
 
