--- a/clients/clients.html
+++ b/clients/clients.html
@@ -47,7 +47,7 @@
     </div>
   </header>
 
-  <main>
+  <main id="page-content" class="fade-in">
     <section class="hero">
       <div class="container hero-inner">
         <div>
@@ -90,6 +90,8 @@
         </div>
       </div>
     </section>
+    <div id="transition-overlay"></div>
+  </main>
 
   <footer>
     <div class="container footer-grid">
